# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  environment.yml  fix-environment-files.sh  pyproject.toml  sort_yaml.py  tag_directory.py
pre_commit_hooks/: fix_environment_yamls.py  tag_directories.py  tag_directory.py
